<resources>
    <string name="app_name">Musicae</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Incidencia</string>
    <string name="action_help">Ayuda</string>

    <!-- Tab -->
    <string name="songs">CANCIONES</string>
    <string name="playlists">PLAYLISTS</string>
    <string name="options">Opciones</string>
    <string name="music">Música</string>
    <string name="account">Cuenta</string>
    <string name="log_out">DESCONECTARSE</string>

    <!-- Item Song -->
    <string name="music_title">Music Title</string>
    <string name="music_artist">Music Artist</string>
    <string name="music_length">Music Length</string>
    <string name="music_icon_description">Music Image</string>

    <!-- Playing song -->
    <string name="title">SONANDO AHORA</string>
    <string name="play_btn">Play button</string>
    <string name="pause_btn">Pause button</string>
    <string name="stop_btn">Stop button</string>
    <string name="next_btn">Next Song</string>
    <string name="prev_btn">Previous Song</string>
    <string name="totalDuration">0:00</string>
    <string name="currentDuration">0:00</string>

    <!-- Slide -->
    <string name="slide_next_btn">SIGUIENTE</string>
    <string name="slide_prev_btn">ATRÁS</string>
    <string name="slide_finish_btn">ACABAR</string>
    <string name="img_desc">Icon</string>
    <string name="header">HEADER</string>
    <string name="body_content">Body contente</string>
    <string name="slide_skip_button">No volver a mostrar</string>

    <!-- Report -->
    <string name="report_title">Titulo</string>
    <string name="report_body">Descripción</string>
    <string name="report_sendBtn">ENVIAR</string>

    <!-- Login -->
    <string name="login_title">Iniciar sesión con google</string>

    <!-- Add PlayList -->
    <string name="add_title">Titulo de la PlayList</string>
    <string name="add_subtile">Añade una descripcion</string>
    <string name="add_creatBtn">Crear PlayList</string>

    <!-- Intro -->
    <string name="intro_welcome">Bienvenidos a Musicae, con esta app podras reproducir las cansiones de tu dispositivo en cualquier momento y sin publicidad.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
</resources>
