<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_music"
                    android:checkable="true"
                    android:icon="@drawable/ic_audiotrack_24dp"
                    android:title="@string/music" />
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_account_circle_white_24dp"
                    android:title="@string/account" />
            </group>
        </menu>
    </item>

</menu>
